@@ -1,6 +1,5 @@
 using ItemMagnetPlus.Core.Netcode;
 using System.IO;
-using Terraria.Localization;
 using Terraria.ModLoader;
 
 namespace ItemMagnetPlus
@@ -8,8 +7,6 @@ namespace ItemMagnetPlus
 	public class ItemMagnetPlus : Mod
 	{
 		public static bool JPANsLoaded = false;
-
-		public static LocalizedText AcceptClientChangesText { get; private set; }
 
 		// Mod Helpers compat
 		public static string GithubUserName { get { return "direwolf420"; } }
@@ -19,9 +16,6 @@ namespace ItemMagnetPlus
 		{
 			NetHandler.Load();
 			JPANsLoaded = ModLoader.HasMod("JPANsBagsOfHoldingMod");
-
-			string category = $"Configs.Common.";
-			AcceptClientChangesText ??= Language.GetOrRegister(this.GetLocalizationKey($"{category}AcceptClientChanges"));
 		}
 
 		public override void Unload()
