@@ -1,9 +1,9 @@
-en-US, 62/62, 100%, missing 0
-de-DE, 0/62, 0%, missing 62
-it-IT, 0/62, 0%, missing 62
-fr-FR, 0/62, 0%, missing 62
-es-ES, 0/62, 0%, missing 62
-ru-RU, 62/62, 100%, missing 0
-zh-Hans, 0/62, 0%, missing 62
-pt-BR, 0/62, 0%, missing 62
-pl-PL, 62/62, 100%, missing 0
+en-US, 61/61, 100%, missing 0
+de-DE, 0/61, 0%, missing 61
+it-IT, 61/61, 100%, missing 0
+fr-FR, 0/61, 0%, missing 61
+es-ES, 0/61, 0%, missing 61
+ru-RU, 61/61, 100%, missing 0
+zh-Hans, 0/61, 0%, missing 61
+pt-BR, 0/61, 0%, missing 61
+pl-PL, 61/61, 100%, missing 0
