@@ -148,8 +148,6 @@ Mods: {
 				AlwaysMaxRange.Label: Boss + Gittata massima
 				OnlyConfig.Label: Personalizzato + Gittata massima
 			}
-
-			Common.AcceptClientChanges: Solo il proprietario del mondo può cambiare la configurazione! Fallo in giocatore singolo.
 		}
 	}
 }
