@@ -148,8 +148,6 @@ Mods: {
 				AlwaysMaxRange.Label: Bossowie + Maksymalny zasięg
 				OnlyConfig.Label: Własne + Maksymalny zasięg
 			}
-
-			Common.AcceptClientChanges: Tylko gospodarz tego świata może zmieniać ustawienia konfiguracji! Zrób to w trybie jednoosobowym.
 		}
 	}
 }
