@@ -148,8 +148,6 @@ Mods: {
 				AlwaysMaxRange.Label: Боссы + Максимальная дистанция
 				OnlyConfig.Label: Пользовательские + Максимальная дистанция
 			}
-
-			Common.AcceptClientChanges: Только владелец этого мира может менять настройки! Смените настройки в одиночной игре.
 		}
 	}
 }
