@@ -53,3 +53,4 @@ If you want to add support for different languages, you are welcome to contribut
 List of localization contributors:
 * Polish: Taco
 * Russian: GodHybrid
+* Italian: Sea Noodle
