@@ -54,3 +54,4 @@ If you want to add support for different languages, you are welcome to contribut
 List of localization contributors:
 * Polish: [b]Taco[/b]
 * Russian: [b]GodHybrid[/b]
+* Italian: [b]Sea Noodle[/b]
