@@ -1,1 +1,3 @@
-* Added russian localization, thanks GodHybrid!
+v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.
+
+* Added italian localization, thanks Sea Noodle!
